[project]
name = "judge0"
version = "0.0.1-rc3"
description = "The official Python library for Judge0."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Judge0", email = "support@judge0.com" }]
classifiers = [
    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",

    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["requests>=2.32.3"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/judge0/judge0-python"
Repository = "https://github.com/judge0/judge0-python.git"
Issues = "https://github.com/judge0/judge0-python/issues"

[project.optional-dependencies]
test = ["pytest", "mkdocs"]
